@@ -15,20 +15,24 @@
  */
 package io.micronaut.http.server.netty.handler.accesslog.element;
 
+import io.micronaut.http.server.util.PerSecondCache;
 import io.netty.channel.socket.SocketChannel;
 import io.netty.handler.codec.http.HttpHeaders;
 import org.jspecify.annotations.Nullable;
 
+import java.time.Instant;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.Locale;
 import java.util.Set;
 
 /**
  * DateTimeElement LogElement.
+ * <p>
+ * Unless the pattern prints a sub-second field, the formatted text only changes once per second
+ * and is cached in a {@link PerSecondCache}. The element is shared by every access log instance
+ * ({@link #copy()} returns {@code this}), so the cache is shared by all event loops.
  *
  * @author croudet
  * @since 2.0
@@ -42,12 +46,18 @@ final class DateTimeElement implements LogElement {
 
     private static final String COMMON_LOG_PATTERN = "'['dd/MMM/yyyy:HH:mm:ss Z']'";
 
-    private static final Set<Event> LAST_RESPONSE_EVENTS = Collections.unmodifiableSet(EnumSet.of(Event.ON_LAST_RESPONSE_WRITE));
+    private static final Set<Event> LAST_RESPONSE_EVENTS = Set.of(Event.ON_LAST_RESPONSE_WRITE);
 
     private final DateTimeFormatter formatter;
     private final Set<Event> events;
     @Nullable
     private final String dateFormat;
+    /**
+     * {@code null} when the pattern has a sub-second field, in which case every value is
+     * formatted from the exact current time.
+     */
+    @Nullable
+    private final PerSecondCache cache;
 
     /**
      * Create a DateTimeElement.
@@ -76,12 +86,62 @@ final class DateTimeElement implements LogElement {
         }
         this.dateFormat = dateFormat;
         String[] formatSplit = format.split(",");
+        String pattern;
         if (formatSplit.length < 2) {
+            // also covers a comma-only format, which split reduces to an empty array
+            pattern = format;
             formatter = DateTimeFormatter.ofPattern(format, Locale.US);
         } else {
-            formatter = DateTimeFormatter.ofPattern(formatSplit[0], Locale.US).withZone(ZoneId.of(formatSplit[1].strip()));
+            pattern = formatSplit[0];
+            formatter = DateTimeFormatter.ofPattern(pattern, Locale.US).withZone(ZoneId.of(formatSplit[1].strip()));
         }
+        cache = hasSubSecondField(pattern) ? null : new PerSecondCache(this::formatSecond);
         events = fromStart ? Event.REQUEST_HEADERS_EVENTS : LAST_RESPONSE_EVENTS;
+    }
+
+    /**
+     * Whether the pattern contains an unquoted fraction-of-second ({@code S}), nano-of-second
+     * ({@code n}), nano-of-day ({@code N}) or milli-of-day ({@code A}) field. Every other pattern
+     * letter is a function of the instant truncated to the second.
+     *
+     * @param pattern The {@link DateTimeFormatter} pattern
+     * @return {@code true} if the output can change within a second
+     */
+    static boolean hasSubSecondField(String pattern) {
+        boolean quoted = false;
+        for (int i = 0; i < pattern.length(); i++) {
+            char c = pattern.charAt(i);
+            if (c == '\'') {
+                quoted = !quoted;
+            } else if (!quoted && (c == 'S' || c == 'n' || c == 'N' || c == 'A')) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private String formatSecond(long epochSecond) {
+        return ZonedDateTime.ofInstant(Instant.ofEpochSecond(epochSecond), ZoneId.systemDefault()).format(formatter);
+    }
+
+    private String now() {
+        if (cache != null) {
+            return cache.now();
+        }
+        return ZonedDateTime.now().format(formatter);
+    }
+
+    /**
+     * The value this element produces for the given instant.
+     *
+     * @param epochMillis The instant, in milliseconds since the epoch
+     * @return The formatted text
+     */
+    String value(long epochMillis) {
+        if (cache != null) {
+            return cache.get(epochMillis);
+        }
+        return ZonedDateTime.ofInstant(Instant.ofEpochMilli(epochMillis), ZoneId.systemDefault()).format(formatter);
     }
 
     @Override
@@ -92,7 +152,7 @@ final class DateTimeElement implements LogElement {
     @Override
     public String onRequestHeaders(@Nullable SocketChannel channel, String method, HttpHeaders headers, String uri, String protocol) {
         if (events.contains(Event.ON_REQUEST_HEADERS)) {
-            return ZonedDateTime.now().format(formatter);
+            return now();
         } else {
             return ConstantElement.UNKNOWN_VALUE;
         }
@@ -101,7 +161,7 @@ final class DateTimeElement implements LogElement {
     @Override
     public String onLastResponseWrite(int contentSize) {
         if (events.contains(Event.ON_LAST_RESPONSE_WRITE)) {
-            return ZonedDateTime.now().format(formatter);
+            return now();
         } else {
             return ConstantElement.UNKNOWN_VALUE;
         }
